[Snyk] Fix for 21 vulnerabilities (#2763)
Co-authored-by: snyk-bot <snyk-bot@snyk.io>
Co-authored-by: Vadim Korolik <vkorolik@gmail.com>

--- a/frontend/src/components/Breadcrumb/Breadcrumb.module.scss
+++ b/frontend/src/components/Breadcrumb/Breadcrumb.module.scss
@@ -4,6 +4,7 @@
 
 .icon {
     height: var(--size-large);
+    padding-top: var(--size-xxSmall);
     width: var(--size-large);
 }
 
@@ -13,7 +14,6 @@
 
     :global(.ant-breadcrumb-separator) {
         color: var(--color-gray-400);
-        display: flex;
         margin-left: var(--size-xxSmall) !important;
         margin-right: var(--size-xxSmall) !important;
     }
